updated link for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <body>
     <object data="cv/Alex CABRERA CV.pdf" type="application/pdf">
-      <p>Unable to display PDF file. <a href="cv/Alex CABRERA CV.pdf">Download</a> instead.</p>
+      <p><a href="cv/Alex CABRERA CV.pdf">Télécharger le CV détaillé</a></p>
     </object>
   </body>
 </html>
